--- a/WebProsjekt/WB Prosjekt/supertilbud.html
+++ b/WebProsjekt/WB Prosjekt/supertilbud.html
@@ -11,7 +11,7 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
 </head>
 <body>
-
+    <!--navigasjonsbar-->
     <nav class="navbar navbar-default navbar-fixed-top" style="height: 75px;">
         <div class="container">
             <div class="navbar-header">
@@ -29,7 +29,7 @@
             </div>
         </div>
     </nav>
-
+    <!--slideshow bilder-->
     <div id="captioned-gallery">
         <figure class="slider">
             <figure>
@@ -51,8 +51,8 @@
         </figure>
     </div>
 
-    <!--Content Index-->
-
+   
+    <!--Form for å bestille tur-->
     <div class="content-container">
 
         <div class="fuckface">
