--- a/WebProsjekt/WB Prosjekt/tilbud.html
+++ b/WebProsjekt/WB Prosjekt/tilbud.html
@@ -11,7 +11,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
     </head>
     <body>
-
+        <!--Navigasjonsbar-->
         <nav class="navbar navbar-default navbar-fixed-top" style="height: 75px;">
             <div class="container">
                 <div class="navbar-header">
@@ -29,7 +29,7 @@
                 </div>
             </div>
         </nav>
-
+        <!--Slideshow bilder-->
         <div id="captioned-gallery">
             <figure class="slider">
                 <figure>
@@ -51,10 +51,10 @@
             </figure>
         </div>
 
-        <!--Content Index-->
+        
 
         <div class="content-container">
-
+            <!--Venstre innhold-->
             <div class="content-left col-md-8">
                 <div class="page-header">
                     <h2>Våre tilbud <small> - reiser for litt mindre</small></h2>
@@ -74,9 +74,9 @@
                 <a href="supertilbud.html"><p class="salg">For 22 997,- kommer du på 10 dagerscruise til det indiske hav</p>
              </a>
         </div>
-
+            <!--Høyre innhold nyheter-->
             <div class="content-right col-md-4">
-                <!--Legg til siste nytt for siden-->
+               
                 <div class="page-header">
                     <h2>Siste nytt <small>- Hold deg oppdatert</small></h2>
                 </div>
