added titles lol

--- a/WebProsjekt/WB Prosjekt/skip.html
+++ b/WebProsjekt/WB Prosjekt/skip.html
@@ -1,9 +1,10 @@
 ﻿<!DOCTYPE html>
 
 <html lang="en">
+    <!--kobler html opp mot css-filer og javascript-->
     <head>
         <meta charset="utf-8" />
-        <title></title>
+        <title>Skip - Cruisetastic</title>
         <link rel="stylesheet" type="text/css" href="css/style.css" />
         <link rel="stylesheet" type="text/css" href="css/slider.css" />
         <link rel="stylesheet" type="text/css" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css" />
