Oppdaterte riktig datoer

--- a/WebProsjekt/WB Prosjekt/dest.html
+++ b/WebProsjekt/WB Prosjekt/dest.html
@@ -35,7 +35,7 @@
         <figure class="slider">
             <figure>
                 <img src="img/carribien_head.jpg" alt="">
-                <figcaption>Nyt en fantastisk 3-ukers på Karribien</figcaption>
+                <figcaption>Nyt en fantastisk 2-ukers på Karribien</figcaption>
             </figure>
             <figure>
                 <img src="img/dubai_head.jpg" alt="">
@@ -47,7 +47,7 @@
             </figure>
             <figure>
                 <img src="img/mediteranien_head.jpg" alt="">
-                <figcaption>Nyt en fantastisk 4-ukers i middelhavet</figcaption>
+                <figcaption>Nyt en fantastisk 1-ukers i middelhavet</figcaption>
             </figure>
         </figure>
     </div>
@@ -67,9 +67,9 @@
                 <h3>
                     Cruise i Karibia
                     <br />
-                    <small>3 ukers cruise til Karibia</small>
+                    <small>2 ukers cruise til Karibia</small>
                     <br />
-                    <small>Nyt 3 fantastiske uker fra kun <large>25 495,-</large></small>
+                    <small>Nyt 2 fantastiske uker fra kun <large>25 495,-</large></small>
                     <a class="btn btn-secondary" role="button" data-toggle="collapse" href="#collapseKaribia" aria-expanded="false" aria-controls="collapseExample">
                         Les mer her.
                     </a>
@@ -106,9 +106,9 @@
                 <h3>
                     Cruise i Dubai
                     <br />
-                    <small>2 ukers cruise til Dubai</small>
+                    <small>10 dagers cruise til Dubai</small>
                     <br />
-                    <small>Nyt 2 fantastiske uker fra kun <large>13 995,-</large></small>
+                    <small>Nyt 10 fantastiske dager på cruise fra kun <large>13 995,-</large></small>
                     <a class="btn btn-secondary" role="button" data-toggle="collapse" href="#collapseDubai" aria-expanded="false" aria-controls="collapseExample">
                         Les mer her.
                     </a>
@@ -120,7 +120,7 @@
                             <small>
                                 Vil du ha en kombinasjon av komfortabelt liv på havet og nye og annerledes opplevelser?
                                 Velg vårt cruise i Persiabukten og opplev omgivelser som hentet ut av "Tusen og én natt"!
-                                Vings cruise i Persiabukten tar deg til Dubai, Abu Dhabi, Muscat og Khasab,
+                                Cruise i Persiabukten tar deg til Dubai, Abu Dhabi, Muscat og Khasab,
                                 det ene reisemålet mer spektakulært enn det andre.
                                 Muscat, hovedstaden i sultanmakten Oman tilbyr et utvalg av severdigheter,
                                 strender og markeder, og Dubai er en herlig blanding av tradisjon og overdådig luksus.
@@ -138,9 +138,9 @@
                 <h3>
                     Cruise i Middelhavet
                     <br />
-                    <small>4 ukers cruise til Middelhavet</small>
+                    <small>12 dagers cruise til Middelhavet</small>
                     <br />
-                    <small>Nyt 4 fantastiske uker fra kun <large>35 795,-</large></small>
+                    <small>Nyt 12 fantastiske dager fra kun <large>35 795,-</large></small>
                     <a class="btn btn-secondary" role="button" data-toggle="collapse" href="#collapseMiddel" aria-expanded="false" aria-controls="collapseExample">
                         Les mer her.
                     </a>
@@ -152,7 +152,7 @@
                             <small>
                                 Vil du ha en kombinasjon av komfortabelt liv på havet og nye og annerledes opplevelser?
                                 Velg vårt cruise i Persiabukten og opplev omgivelser som hentet ut av "Tusen og én natt"!
-                                Vings cruise i Persiabukten tar deg til Dubai, Abu Dhabi, Muscat og Khasab,
+                                Cruise i Persiabukten tar deg til Dubai, Abu Dhabi, Muscat og Khasab,
                                 det ene reisemålet mer spektakulært enn det andre.
                                 Muscat, hovedstaden i sultanmakten Oman tilbyr et stort utvalg av severdigheter,
                                 strender og markeder, og Dubai er en herlig blanding av tradisjon og overdådig luksus.
