--- a/WebProsjekt/WB Prosjekt/reise.html
+++ b/WebProsjekt/WB Prosjekt/reise.html
@@ -93,9 +93,9 @@
                            <label class="title">Destinasjon<span class="required">*</span></label><div class="large">
                                <span>
                                    <select name="select" required="required">
-                                       <option value="Karibien">Karibien - 3 uker - 10.02.2016 til 02.03.2016</option>
-                                       <option value="Middelhavet ">Middelhavet - 4 uker - 06.02.2016 til 27.02.2016 </option>
-                                       <option value="Dubai">Dubai - 2 uker - 03.03.2016 til 17.03.206</option>
+                                       <option value="Karibien">Karibien - 2 uker - 10.02.2016 til 24.02.2016</option>
+                                       <option value="Middelhavet ">Middelhavet - 12 dager - 06.02.2016 til 18.02.2016 </option>
+                                       <option value="Dubai">Dubai - 10 dager - 03.03.2016 til 13.03.206</option>
                                        <option value="Indiske Hav">Indiske Hav - 2 uker - 10.03.2016 til 24.03.2016</option>
                                    </select><i></i>
                                </span>
