--- a/WebProsjekt/WB Prosjekt/skip.html
+++ b/WebProsjekt/WB Prosjekt/skip.html
@@ -13,7 +13,7 @@
     </head>
 
     <body>
-
+        <!--navigasjonstabber øverst på siden-->
         <nav class="navbar navbar-default navbar-fixed-top" style="height: 75px;">
             <div class="container">
                 <div class="navbar-header">
@@ -32,6 +32,7 @@
             </div>
         </nav>
 
+        <!--banner med bilder som blas gjennom-->
         <div id="captioned-gallery">
             <figure class="slider">
                 <figure>
@@ -56,15 +57,15 @@
         <!--Content Index-->
 
         <div class="content-container">
-
+            <!--hovedinnhold med beskrivelser og bilder av hvert skip (kommenterer kun det første fordi de er alle like)-->
             <div class="content-left col-md-8">
                 <div class="page-header">
                     <h2>Våre skip <small> - Alt du trenger å vite</small></h2>
                 </div>
 
-
+                <!--bilde av skipet-->
                 <img src="img/skip/coolship.png" alt="Vårt største og kuleste cruiseskip." width="566" height="379" />
-                
+                <!--navn og beskrivende tekst til skipet-->
                 <div class="page-header">
                     <h3>Cruisetastic Luxury</h3>
                     <p><i>Cruisetastic Luxury</i> er vårt største og mest luxuriøse cruiseskip, og rommer opp til 5000 passasjerer på en gang. Du finner mange ulike fasiliteter fordelt på fem etasjer, blant annet en casino, tre forskjellige restauranter, diverse butikker, og til og med et basseng på terrassen på toppen. Vi er såpass stolte av dette skipet av vi føler det blir riktig å kalle det... vårt "flaggskip" ;)</p>
@@ -126,6 +127,7 @@
 
         </div>
 
+        <!--copyright som bunntekst-->
         <footer class="footer">
             <div class="container">
                 <p class="text-muted">Cruisetastic &copy;</p>
