--- a/WebProsjekt/WB Prosjekt/index.html
+++ b/WebProsjekt/WB Prosjekt/index.html
@@ -12,6 +12,7 @@
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     </head>
     <body>
+        <!--Script for facebook kommentarfelt-->
         <div id="fb-root"></div>
         <script>
             (function(d, s, id) {
@@ -22,7 +23,7 @@
               fjs.parentNode.insertBefore(js, fjs);
             }(document, 'script', 'facebook-jssdk'));
         </script>
-
+        <!--Navigasjonsbar-->
         <nav class="navbar navbar-default navbar-fixed-top" style="height: 75px;">
             <div class="container">
                 <div class="navbar-header">
@@ -40,7 +41,7 @@
                 </div>
             </div>
         </nav>
-  
+  <!--Slideshow bilder-->
         <div id="captioned-gallery">
             <figure class="slider">
                 <figure>
@@ -62,10 +63,10 @@
             </figure>
         </div>
 
-        <!--Content Index-->
+      
 
         <div class="content-container">
-
+            <!--Venstre innhold-->
             <div class="content-left col-md-8">
                 <div class="page-header">
                     <h2>Velkommen til Cruisetastic <small> - Ledende innen cruisereiser</small></h2>
@@ -82,9 +83,9 @@
                 <div class="fb-comments" data-href="https://www.facebook.com/cruisetasticcruises" data-width="500" data-numposts="5"></div>
 
             </div>
-
+            <!--Høyre innhold-->
             <div class="content-right col-md-4">
-                <!--Legg til siste nytt for siden-->
+                
                 <div class="page-header">
                     <h2>Siste nytt <small>- Hold deg oppdatert</small></h2>
                 </div>
