enda flere kommentarer

--- a/WebProsjekt/WB Prosjekt/dest.html
+++ b/WebProsjekt/WB Prosjekt/dest.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
 <head>
+    <!--kobler html opp mot css-filer og javascript-->
     <meta charset="utf-8" />
     <title>Destinasjoner - Cruisetastic</title>
     <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -12,7 +13,7 @@
     <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
 </head>
 <body>
-
+    <!--navigasjonstabber øverst på siden-->
     <nav class="navbar navbar-default navbar-fixed-top" style="height: 75px;">
         <div class="container">
             <div class="navbar-header">
@@ -31,6 +32,7 @@
         </div>
     </nav>
 
+    <!--banner med bilder som blas gjennom-->
     <div id="captioned-gallery">
         <figure class="slider">
             <figure>
@@ -56,13 +58,16 @@
 
     <div class="content-container">
 
+        <!--hovedinnhold med beskrivelser og bilder av hver cruisereise (kommenterer kun det første fordi de er alle like)-->
         <div class="content-left col-md-8">
             <div class="page-header">
                 <h2>Se hvilke destinasjoner vi tilbyr <small> - Destinasjoner for store og små.</small></h2>
             </div>
 
+            <!--bilde av destinasjon-->
             <img src="img/carribien.jpg" width="566" height="353" alt="..." class="img-rounded">
 
+            <!--kort beskrivende tekst-->
             <div class="page-header">
                 <h3>
                     Cruise i Karibia
@@ -74,7 +79,8 @@
                         Les mer her.
                     </a>
                 </h3>
-
+                
+                <!--lengre beskrivelse, må trykke på "Les mer" for å utvide-->
                 <div class="collapse" id="collapseKaribia">
                     <div class="well">
                         <h4>
@@ -88,7 +94,7 @@
                                 Velger du å reise på cruise i Karibia er dette den perfekte ferien for deg som pensjonist.
                                 Velg det cruiset som passer deg best. Med vår praktiske pakkeløsninger får du alt servert – fly,
                                 hotellovernattinger og cruise. I Karibia har vi et stort utvalg av ruter,
-                                og her kan du velge mellom noen av våre største cuiseskip, Cruisetastic Luxury eller Cruisetastic NoPanic.
+                                og her kan du velge mellom noen av våre største cuiseskip, Cruisetastic Luxury eller Cruisetanic.
                             </small>
                             <small>
                                 Vi besøker flere spennende havner og øyer som for eksempel Jamaica, Puerto Rico,
@@ -215,6 +221,7 @@
 
         </div>
 
+    <!--bunntekst med copyright-->
     <footer class="footer">
         <div class="container">
             <p class="text-muted">Cruisetastic &copy;</p>
