--- a/WebProsjekt/WB Prosjekt/skip.html
+++ b/WebProsjekt/WB Prosjekt/skip.html
@@ -127,7 +127,7 @@
 
         </div>
 
-        <!--copyright som bunntekst-->
+        <!--bunntekst med copyright-->
         <footer class="footer">
             <div class="container">
                 <p class="text-muted">Cruisetastic &copy;</p>
