--- a/WebProsjekt/WB Prosjekt/supertilbud.html
+++ b/WebProsjekt/WB Prosjekt/supertilbud.html
@@ -1,6 +1,7 @@
 ﻿<!DOCTYPE html>
 
 <html lang="en">
+<!--kobler html opp mot css-filer og javascript-->
 <head>
     <meta charset="utf-8" />
     <title>Bestill tilbud - Cruisetastic</title>
@@ -52,7 +53,7 @@
     </div>
 
    
-    <!--Form for å bestille tur-->
+    <!--form for å bestille tur, validering utføres delvis av html5 og delvis av javascript-->
     <div class="content-container">
 
         <div class="fuckface">
@@ -90,7 +91,7 @@
     </div>
 
 
-
+    <!--bunntekst med copyright-->
     <footer class="footer">
         <div class="container">
             <p class="text-muted">Cruisetastic &copy;</p>
