Comments el finito + rounded skipcorners

--- a/WebProsjekt/WB Prosjekt/index.html
+++ b/WebProsjekt/WB Prosjekt/index.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
     <head>
+        <!--kobler html opp mot css-filer og javascript-->
         <meta charset="utf-8" />
         <title>Hjemmeside - Cruisetastic</title>
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/normalize/3.0.3/normalize.min.css" type="text/css">
@@ -11,6 +12,7 @@
         <script src="https://ajax.googleapis.com/ajax/libs/jquery/2.1.4/jquery.min.js"></script>
         <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/js/bootstrap.min.js"></script>
     </head>
+
     <body>
         <!--Script for facebook kommentarfelt-->
         <div id="fb-root"></div>
@@ -23,6 +25,7 @@
               fjs.parentNode.insertBefore(js, fjs);
             }(document, 'script', 'facebook-jssdk'));
         </script>
+
         <!--Navigasjonsbar-->
         <nav class="navbar navbar-default navbar-fixed-top" style="height: 75px;">
             <div class="container">
@@ -41,7 +44,8 @@
                 </div>
             </div>
         </nav>
-  <!--Slideshow bilder-->
+
+        <!--Slideshow bilder-->
         <div id="captioned-gallery">
             <figure class="slider">
                 <figure>
@@ -98,6 +102,7 @@
             </div>
         </div>
 
+        <!--bunntekst med copyright-->
         <footer class="footer">
             <div class="container">
                 <p class="text-muted">Cruisetastic &copy;</p>
