--- a/WebProsjekt/WB Prosjekt/kontakt.html
+++ b/WebProsjekt/WB Prosjekt/kontakt.html
@@ -2,6 +2,7 @@
 
 <html lang="en">
     <head>
+        <!--kobler html opp mot css-filer og javascript-->
         <meta charset="utf-8" />
         <title>Kontakt - Cruisetastic</title>
         <link rel="stylesheet" type="text/css" href="css/style.css" />
@@ -135,6 +136,7 @@
             </div>
         </div>
 
+        <!--bunntekst med copyright-->
         <footer class="footer">
             <div class="container">
                 <p class="text-muted">Cruisetastic &copy;</p>
